# Magisterka

./: .gitignore  README.md  benchmark_results.txt  install.sh
Dokument/: kompiluj.sh  mojabibliografia.bib  opis_implementacji.tex  plainurl.bst  szablon.tex  zrodla.md
Kod/: CMakeLists.txt
Kod/benchmark_suite/: generate_plots.py  run_cache.py  run_suite.py  test_run_cache.py
Kod/benchmark_suite/presets/: default.preset  quick.preset
Kod/common/: CMakeLists.txt  blis_loader.c  common.h  conv_libxsmm_loader.c  json_out.c  preset.c  runner.c  stats.c  sysinfo.c  timing.c
Kod/conv/: CMakeLists.txt  benchmark.c  conv.h  conv_1x1.c  conv_blocked.c  conv_im2col_gemm.c  conv_internal.h  conv_libxsmm.c  conv_microkernel.c  conv_naive.c  conv_nchwc.c  conv_oc_blocked.c  conv_omp.c  conv_packed.c  conv_reorder.c  conv_winograd.c  conv_zen3.c
Kod/dot_product/: CMakeLists.txt  benchmark.c  dot.h  dot_naive.c  dot_omp.c  dot_simd.c  dot_simd_multiacc.c  lvl1.c  lvl2.c  lvl3.c  main.c  wyniki.txt
Kod/gemm/: CMakeLists.txt  benchmark.c  gemm.h  gemm_blocked.c  gemm_ikj.c  gemm_internal.h  gemm_microkernel.c  gemm_naive.c  gemm_omp.c  gemm_packed.c  gemm_strassen.c  gemm_zen3.c  gemm_zen3_best.c  gemm_zen3_intrin.c  gemm_zen3_pack.h  gemm_zen3_par.c  gemm_zen3_sched.c  gemm_zen3_tiny.c  gemm_zen3_tuned.c  lvl1.c  lvl2.c  lvl3.c  main.c  wyniki.txt
Kod/gemv/: CMakeLists.txt  benchmark  benchmark.c  gemv.h  gemv_avx_fma_blocked.c  gemv_avx_fma_v2.c  gemv_avx_fma_v3.c  gemv_avx_fma_v3_omp.c  gemv_naive.c  gemv_simd.c  gemv_simd_prefetch.c  lvl1.c  lvl2.c  lvl3.c  main.c  run_benchmarks.sh  tuning  tuning.c  tuning_results.txt  wyniki.txt
Kod/gemv/paper/: bandwidth_results.csv  fedcsis.tex  generate_plots.py  paper.aux  paper.tex  paper_new.tex  results_1t.json  results_6t.json
Kod/utils/: cache_read.c
Ksiazka/: bibliografia.bib  ksiazka.aux  ksiazka.bbl  ksiazka.bcf  ksiazka.blg  ksiazka.run.xml  ksiazka.tex  ksiazka.toc
Prezentacja/: main.tex
